# UAP

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  common.mk  makefile  super.mk
module/public/mutex/: CMakeLists.txt  mutex_return.h  posix_rw_lock.cc  posix_rw_lock.h  pthread_mutex_lock.h  read_write_lock.h  read_write_lock_posix.cc  read_write_lock_posix.h  rw_lock.h
module/public/odp/: CMakeLists.txt  temp_multiton.h  temp_singleton.h
module/public/socket/: CMakeLists.txt  sock_address.cc  sock_address.h  sock_client.cc  sock_client.h  sock_common.h  sock_fd.cc  sock_fd.h  sock_return.h  sock_server.cc  sock_server.h
plat/: CMakeLists.txt
plat/cm/: cm_return.h  parser_ini.cc  parser_ini.h  parser_json.h  parser_xml.h
plat/common/: common_defines.h
plat/config/: config_log.h  config_return.h
plat/config/lib/: CMakeLists.txt  config_return.cc  config_static.cc  config_static.h
plat/etc/: log.json  process.json
plat/etc/process/: messaged.json  messaged.yaml  template.yaml  testd.yaml
plat/gui/: README.md
plat/infra/: CMakeLists.txt
plat/infra/base/: alloctor.h  base_return.h  base_return_ext.h  object.h
plat/infra/baseio/: baseio_fd.h  baseio_return.h  baseio_select.h
plat/infra/container/: CMakeLists.txt  bitmap.cc  bitmap.h  bitmap_return.cc  bitmap_return.h  container_return.h  hash_table.h  link_list.h  node_tree.cc  node_tree.h  trie_tree.h
plat/infra/dm/: dm_log.h  dm_return.h
plat/infra/ds/: CMakeLists.txt
plat/infra/file/: CMakeLists.txt  c_file.h  file.cc  file.h  file_api.cc  file_api.h  file_c.cc  file_c.h  file_fd.cc  file_fd.h  file_mode.cc  file_mode.h  file_path.cc  file_path.h  file_return.cc  file_return.h  file_state.h
plat/infra/fsm/: fsm.h  fsm_event.h  fsm_return.cc  fsm_return.h  fsm_state.h  fsm_transition.h
plat/infra/heartbeat/: CMakeLists.txt
plat/infra/io/: CMakeLists.txt  io_auto_select.cc  io_auto_select.h  io_defines.h  io_epoll_fd.cc  io_epoll_fd.h  io_fd.h  io_fd_select_item.h  io_log.h  io_return.cc  io_return.h  io_select.cc  io_select.h  io_select_event.h  io_select_item.cc  io_select_item.h  io_select_item_template.h
plat/infra/ipc/: CMakeLists.txt  ipc_fd.h  ipc_fd_type.h  ipc_log.h  ipc_mode.cc  ipc_mode.h  ipc_return.cc  ipc_return.h  ipc_return_new.h  sysv_array_shm.cc  sysv_ipc_rm_ctrl.cc  sysv_ipc_rm_ctrl.h  sysv_ipc_rm_implement.cc  sysv_ipc_rm_implement.h  sysv_mq_shm.h  sysv_sem.h
plat/infra/mempool/: CMakeLists.txt  mempool.cc  mempool.h  mempool_busylist.cc  mempool_busylist.h  mempool_center.cc  mempool_center.h  mempool_freelist.cc  mempool_freelist.h  mempool_item.h  mempool_itemori.h  mempool_memorylist.h  mempool_osproxy.cc  mempool_osproxy.h  mempool_return.cc  mempool_return.h  mempool_sizemap.cc  mempool_sizemap.h  mempool_threadcache.cc  mempool_threadcache.h  mempool_untrack.cc  mempool_untrack.h
plat/infra/message/: message.h  message_body.h  message_head.h  message_id.h  message_raw.h  message_return.h  message_stream.h  message_stream_binary.h  message_stream_memory.h  message_stream_mode.h  message_type.cc  message_type.h
plat/infra/odp/: raw_message.h  temp_multiton.h  temp_singleton.h  thread_safe_queue.h
plat/infra/parser/: CMakeLists.txt  parser.h  parser_ini.cc  parser_ini.h  parser_json.cc  parser_json.h  parser_return.h  parser_tvl.cc  parser_tvl.h  parser_yaml.cc  parser_yaml.h
plat/infra/process/: CMakeLists.txt  doxygen_help.h  process.cc  process.h  process_child.cc  process_child.h  process_config.cc  process_config.h  process_id.cc  process_id.h  process_info.cc  process_info.h  process_log.h  process_main.h  process_parent.cc  process_parent.h  process_return.h  process_role.cc  process_role.h  process_template.h
plat/infra/report/: CMakeLists.txt  report.h  report_log.h  report_mode.h  report_return.cc  report_return.h
plat/infra/return/: CMakeLists.txt  error_code_space_define.h  return.cc  return.h
plat/infra/socket/: CMakeLists.txt  sock_address.h  sock_client.cc  sock_client.h  sock_fd.cc  sock_fd.h  sock_fd_select_item.h  sock_log.h  sock_return.cc  sock_return.h  sock_server.cc  sock_server.h
plat/infra/thread/: CMakeLists.txt  doxygen_help.h  thread.h  thread_id.h  thread_info.cc  thread_info.h  thread_mutex_lock.cc  thread_return.h  thread_rw_lock.h  thread_template.h
plat/infra/time/: CMakeLists.txt  time_c.cc  time_c.h  time_return.cc  time_return.h  vtime.h
plat/infra/timer/: CMakeLists.txt  time_cpp.h  time_return.cc  timer_date.h  timer_fd.cc  timer_fd.h  timer_log.h  timer_return.cc  timer_return.h  timer_time.h  timer_timer.cc  timer_timer.h  vtime.h
plat/infra/util/: CMakeLists.txt  doxygen_help.h
plat/logd/: readme.txt
plat/message/: CMakeLists.txt  message_log.h  message_raw.h  message_return.cc  message_return.h
plat/message/lib/: CMakeLists.txt  message.h  message_agent.cc  message_agent.h  message_agent_endpoint.h  message_agent_state.h  message_api.cc  message_api.h  message_appid.cc  message_appid.h  message_appid_define.h  message_authenticate.h  message_body.h  message_builder.h  message_comid_define.h  message_config.cc  message_config.h  message_ctrl.cc  message_ctrl.h  message_defines.h  message_endpoint.cc  message_endpoint.h  message_endpoint_level.h  message_endpoint_role.h  message_endpoint_select_item.h  message_endpoint_status.h  message_endpoint_type.h  message_format.h  message_handle.h  message_head.cc  message_head.h  message_header.cc  message_header.h  message_heartbeat.cc  message_heartbeat.h  message_heartbeat_element.cc  message_heartbeat_element.h  message_id.cc  message_id.h  message_identity.h  (+29 more)
plat/message/protobuf/: CMakeLists.txt  emample.pb.h  (+10 more)
plat/nameserver/: CMakeLists.txt  ns_daemon.h  ns_endpoint.cc  ns_endpoint.h  ns_log.h
plat/ns/: ns_center.h  ns_client.h  ns_common.h  ns_endpoint.cc  ns_endpoint.h  ns_monitor.h  ns_return.h  ns_server.h  readme.txt
plat/pm/: pm_log.h  pm_return.h  readme.txt
plat/pub/: CMakeLists.txt
plat/rm/: CMakeLists.txt  resource_manager.h  rm_center.h  rm_common.h  rm_controllable.h  rm_memcenter.h  rm_mempool.cc  rm_mempool.h
(+377 files in other folders)
