#ADD_SUBDIRECTORY(odp)
ADD_SUBDIRECTORY(file)
ADD_SUBDIRECTORY(mempool)
ADD_SUBDIRECTORY(ds)
ADD_SUBDIRECTORY(thread)
ADD_SUBDIRECTORY(process)
ADD_SUBDIRECTORY(parser)
ADD_SUBDIRECTORY(socket)
ADD_SUBDIRECTORY(ipc)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(message)


#ADD_SUBDIRECTORY(odp/test)
ADD_SUBDIRECTORY(file/test)
ADD_SUBDIRECTORY(mempool/test)
ADD_SUBDIRECTORY(ds/cpp/test)
ADD_SUBDIRECTORY(parser/test)
ADD_SUBDIRECTORY(socket/test)
ADD_SUBDIRECTORY(thread/test)
ADD_SUBDIRECTORY(process/test)
ADD_SUBDIRECTORY(ipc/shm/test)
ADD_SUBDIRECTORY(ipc/sem/test)
ADD_SUBDIRECTORY(util/time/test)
ADD_SUBDIRECTORY(message/test)

