SET(LIBGRHNS_SRC ns_endpoint.cc)
ADD_LIBRARY(GRHns_SO SHARED ${LIBGRHNS_SRC})
ADD_LIBRARY(GRHns_A STATIC ${LIBGRHNS_SRC})
TARGET_LINK_LIBRARIES(GRHns_SO pthread)
TARGET_LINK_LIBRARIES(GRHns_A pthread)
SET_TARGET_PROPERTIES(GRHns_SO PROPERTIES OUTPUT_NAME "gns" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHns_A PROPERTIES OUTPUT_NAME "gns" CLEAN_DIRECT_OUTPUT 1)
