SET(LIBGRHNS_SRC ns_endpoint.cc)
add_library(GRHns_SO SHARED ${LIBGRHNS_SRC})
add_library(GRHns_A STATIC ${LIBGRHNS_SRC})
INCLUDE_DIRECTORIES(${PLAT_NS_HRD} "/home/ezgaoro/workspace/cppfram/plat/nameserver")
target_link_libraries(GRHns_SO pthread)
target_link_libraries(GRHns_A pthread)
set_target_properties(GRHns_SO PROPERTIES OUTPUT_NAME "gns" CLEAN_DIRECT_OUTPUT 1)
set_target_properties(GRHns_A PROPERTIES OUTPUT_NAME "gns" CLEAN_DIRECT_OUTPUT 1)
