SET(LIBGRHRM_SRC rm_daemon.cc)
ADD_LIBRARY(GRHrm_SO SHARED ${LIBGRHRM_SRC})
ADD_LIBRARY(GRHrm_A STATIC ${LIBGRHRM_SRC})
TARGET_LINK_LIBRARIES(GRHrm_SO pthread)
TARGET_LINK_LIBRARIES(GRHrm_A pthread)
SET_TARGET_PROPERTIES(GRHrm_SO PROPERTIES OUTPUT_NAME "grm" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHrm_A PROPERTIES OUTPUT_NAME "grm" CLEAN_DIRECT_OUTPUT 1)
