#SET(LIBGRHODP_SRC test.cc)
#INCLUDE_DIRECTORIES("${FRAM_ROOT_PATH}/module/public/mutex")
#ADD_LIBRARY(GRHodp_SO SHARED ${LIBGRHODP_SRC})
#ADD_LIBRARY(GRHodp_A STATIC ${LIBGRHODP_SRC})
#SET_TARGET_PROPERTIES(GRHipc_SO PROPERTIES OUTPUT_NAME "godp" CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(GRHipc_A PROPERTIES OUTPUT_NAME "godp" CLEAN_DIRECT_OUTPUT 1)

ADD_SUBDIRECTORY(test)
