SET(LIBGRHSOCKET_SRC sock_fd.cc sock_server.cc)
ADD_LIBRARY(GRHsocket_SO SHARED ${LIBGRHSOCKET_SRC})
ADD_LIBRARY(GRHsocket_A STATIC ${LIBGRHSOCKET_SRC})
INCLUDE_DIRECTORIES("${FRAM_ROOT_PATH}/module/rm")
TARGET_LINK_LIBRARIES(GRHsocket_SO pthread)
TARGET_LINK_LIBRARIES(GRHsocket_A pthread)
SET_TARGET_PROPERTIES(GRHsocket_SO PROPERTIES OUTPUT_NAME "gsocket" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHsocket_A PROPERTIES OUTPUT_NAME "gsocket" CLEAN_DIRECT_OUTPUT 1)
