SET(LIBGCONTAINER_SRC bitmap.cc
                      bitmap_return.cc
)

ADD_LIBRARY(GRHcontainer_SO SHARED ${LIBGCONTAINER_SRC})
ADD_LIBRARY(GRHcontainer_A STATIC ${LIBGCONTAINER_SRC})
SET_TARGET_PROPERTIES(GRHcontainer_SO PROPERTIES OUTPUT_NAME "gcontainer" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHcontainer_A PROPERTIES OUTPUT_NAME "gcontainer" CLEAN_DIRECT_OUTPUT 1)
