SET(LIBGCONTAINER_SRC container_return.cc
                      bitmap.cc
                      node_tree.cc
)

ADD_LIBRARY(GRHcontainer_SO SHARED ${LIBGCONTAINER_SRC})
ADD_LIBRARY(GRHcontainer_A STATIC ${LIBGCONTAINER_SRC})
SET_TARGET_PROPERTIES(GRHcontainer_SO PROPERTIES OUTPUT_NAME "gcontainer" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHcontainer_A PROPERTIES OUTPUT_NAME "gcontainer" CLEAN_DIRECT_OUTPUT 1)
