SET(LIBGRHFILEOP_SRC file_c.cc
                     file_mode.cc
                     )
ADD_LIBRARY(GRHfileop_SO SHARED ${LIBGRHFILEOP_SRC})
ADD_LIBRARY(GRHfileop_A STATIC ${LIBGRHFILEOP_SRC})
TARGET_LINK_LIBRARIES(GRHfileop_SO pthread)
TARGET_LINK_LIBRARIES(GRHfileop_A pthread)
SET_TARGET_PROPERTIES(GRHfileop_SO PROPERTIES OUTPUT_NAME "gfile" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHfileop_A PROPERTIES OUTPUT_NAME "gfile" CLEAN_DIRECT_OUTPUT 1)
