SET(LIBGRHHEARTBEAT_SRC heartbeat_item.cc)
ADD_LIBRARY(GRHheartbeat_SO SHARED ${LIBGRHHEARTBEAT_SRC})
ADD_LIBRARY(GRHheartbeat_A STATIC ${LIBGRHHEARTBEAT_SRC})
SET_TARGET_PROPERTIES(GRHheartbeat_SO PROPERTIES OUTPUT_NAME "gheartbeat" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHheartbeat_A PROPERTIES OUTPUT_NAME "gheartbeat" CLEAN_DIRECT_OUTPUT 1)

