SET(LIBGIO_SRC io_return.cc
               io_select.cc
               io_select_item.cc
)

ADD_LIBRARY(GRHio_SO SHARED ${LIBGIO_SRC})
ADD_LIBRARY(GRHio_A STATIC ${LIBGIO_SRC})
SET_TARGET_PROPERTIES(GRHio_SO PROPERTIES OUTPUT_NAME "gio" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHio_A PROPERTIES OUTPUT_NAME "gio" CLEAN_DIRECT_OUTPUT 1)
