SET(LIBGRHIPC_SRC fifo/fifo_fd.cc
                  fifo/fifo_pair.cc
                  )

ADD_LIBRARY(GRHipc_SO SHARED ${LIBGRHIPC_SRC})
ADD_LIBRARY(GRHipc_A STATIC ${LIBGRHIPC_SRC})
SET_TARGET_PROPERTIES(GRHipc_SO PROPERTIES OUTPUT_NAME "gipc" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHipc_A PROPERTIES OUTPUT_NAME "gipc" CLEAN_DIRECT_OUTPUT 1)

