SET(LIBGRHPARSER_SRC parser_return.cc parser_ini.cc parser_json.cc)
ADD_LIBRARY(GRHparser_SO SHARED ${LIBGRHPARSER_SRC})
ADD_LIBRARY(GRHparser_A STATIC ${LIBGRHPARSER_SRC})
INCLUDE_DIRECTORIES("${FRAM_ROOT_PATH}/3pp")
SET_TARGET_PROPERTIES(GRHparser_SO PROPERTIES OUTPUT_NAME "gparser" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHparser_A PROPERTIES OUTPUT_NAME "gparser" CLEAN_DIRECT_OUTPUT 1)
