SET(LIBGREPORT_SRC report_return.cc
)

ADD_LIBRARY(GRHreport_SO SHARED ${LIBGREPORT_SRC})
ADD_LIBRARY(GRHreport_A STATIC ${LIBGREPORT_SRC})
SET_TARGET_PROPERTIES(GRHreport_SO PROPERTIES OUTPUT_NAME "greport" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHreport_A PROPERTIES OUTPUT_NAME "greport" CLEAN_DIRECT_OUTPUT 1)
