SET(LIBGRHSOCKET_SRC sock_address.cc sock_fd.cc sock_server.cc sock_client.cc)
ADD_LIBRARY(GRHsocket_SO SHARED ${LIBGRHSOCKET_SRC})
ADD_LIBRARY(GRHsocket_A STATIC ${LIBGRHSOCKET_SRC})
TARGET_LINK_LIBRARIES(GRHsocket_SO pthread libgmp.so)
TARGET_LINK_LIBRARIES(GRHsocket_A pthread libgmp.so)
SET_TARGET_PROPERTIES(GRHsocket_SO PROPERTIES OUTPUT_NAME "gsocket" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHsocket_A PROPERTIES OUTPUT_NAME "gsocket" CLEAN_DIRECT_OUTPUT 1)

