SET(LIBGTIME_SRC time_return.cc
                 time_c.cc
)

ADD_LIBRARY(GRHtime_SO SHARED ${LIBGTIME_SRC})
ADD_LIBRARY(GRHtime_A STATIC ${LIBGTIME_SRC})
SET_TARGET_PROPERTIES(GRHtime_SO PROPERTIES OUTPUT_NAME "gtime" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHtime_A PROPERTIES OUTPUT_NAME "gtime" CLEAN_DIRECT_OUTPUT 1)
