SET(LIBGUTIL_SRC bitmap/bitmap_return.cc
                 bitmap/bitmap.cc
)

ADD_LIBRARY(GRHutil_SO SHARED ${LIBGUTIL_SRC})
ADD_LIBRARY(GRHutil_A STATIC ${LIBGUTIL_SRC})
SET_TARGET_PROPERTIES(GRHutil_SO PROPERTIES OUTPUT_NAME "gutil" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHutil_A PROPERTIES OUTPUT_NAME "gutil" CLEAN_DIRECT_OUTPUT 1)
