SET(LIBGRHMSG_SRC lib/message_type.cc
                  )
ADD_LIBRARY(GRHmsg_SO SHARED ${LIBGRHMSG_SRC})
SET_TARGET_PROPERTIES(GRHmsg_SO PROPERTIES OUTPUT_NAME "gmsg" CLEAN_DIRECT_OUTPUT 1)
TARGET_LINK_LIBRARIES(GRHmsg_SO rt)

# messaged
SET(EXECUTABLE_OUTPUT_PATH ${FRAM_BIN_PATH})
SET(MESSAGE_DEAMON_SRC src/message_deamon.cc
                       src/main.cc
                       )
ADD_EXECUTABLE(messaged ${MESSAGE_DEAMON_SRC})
TARGET_LINK_LIBRARIES(message_test ${COMM_OS_LIB} ${PLAT_INFRA_LIB})

