SET(LIBGRHIPC_SRC sysv_sem.cc )
ADD_LIBRARY(GRHipc_SO SHARED ${LIBGRHIPC_SRC})
ADD_LIBRARY(GRHipc_A STATIC ${LIBGRHIPC_SRC})
INCLUDE_DIRECTORIES("${FRAM_ROOT_PATH}/plat/rm")
SET_TARGET_PROPERTIES(GRHipc_SO PROPERTIES OUTPUT_NAME "gipc" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHipc_A PROPERTIES OUTPUT_NAME "gipc" CLEAN_DIRECT_OUTPUT 1)

SET(LIBGRHRMIPC_SRC sysv_ipc_rm_implement.cc)
ADD_LIBRARY(GRHrmipc_SO SHARED ${LIBGRHRMIPC_SRC})
INCLUDE_DIRECTORIES("${FRAM_ROOT_PATH}/plat/rm")
SET_TARGET_PROPERTIES(GRHrmipc_SO PROPERTIES OUTPUT_NAME "grmipc" CLEAN_DIRECT_OUTPUT 1)

ADD_SUBDIRECTORY(test)
