SET(LIBGRHMUTEX_SRC posix_rw_lock.cc
                    pthread_mutex_lock.cc )
ADD_LIBRARY(GRHmutex_SO SHARED ${LIBGRHMUTEX_SRC})
ADD_LIBRARY(GRHmutex_A STATIC ${LIBGRHMUTEX_SRC})
TARGET_LINK_LIBRARIES(GRHmutex_SO pthread)
TARGET_LINK_LIBRARIES(GRHmutex_A pthread)
SET_TARGET_PROPERTIES(GRHmutex_SO PROPERTIES OUTPUT_NAME "gmutex" CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(GRHmutex_A PROPERTIES OUTPUT_NAME "gmutex" CLEAN_DIRECT_OUTPUT 1)
